; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_vlan.c_ifnet_get_ifvlan_retained.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_vlan.c_ifnet_get_ifvlan_retained.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.ifnet*)* @ifnet_get_ifvlan_retained to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ifnet_get_ifvlan_retained(%struct.ifnet* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.ifnet*, align 8
  %4 = alloca i32*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %3, align 8
  %5 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %6 = call i32* @ifnet_get_ifvlan(%struct.ifnet* %5)
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %19

10:                                               ; preds = %1
  %11 = load i32*, i32** %4, align 8
  %12 = call i64 @ifvlan_flags_detaching(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32* null, i32** %2, align 8
  br label %19

15:                                               ; preds = %10
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @ifvlan_retain(i32* %16)
  %18 = load i32*, i32** %4, align 8
  store i32* %18, i32** %2, align 8
  br label %19

19:                                               ; preds = %15, %14, %9
  %20 = load i32*, i32** %2, align 8
  ret i32* %20
}

declare dso_local i32* @ifnet_get_ifvlan(%struct.ifnet*) #1

declare dso_local i64 @ifvlan_flags_detaching(i32*) #1

declare dso_local i32 @ifvlan_retain(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
